    backend instead of the GnuTLS one.
  * Add a versioned >= 1.4 dependency of asterisk in asterisk-h323.
  * Don't use MAKEFLAGS as a variable in debian/rules since it has a special
    meaning for make. Reported by Simon Richter.
  * Add Homepage field, as supported by dpkg 1.14.6.
  * Fix init.d stop when using safe_asterisk. (Closes: #376514)

  [ Kilian Krause ]
  * Add backport hook for Sarge. Update Dapper.
  * Update backports scripts for libcurl4*-dev
  * Fix IMAP crash with upstream source snipplet. (Closes: #440187)
  * Add Homepage field as added in dpkg-dev 1.14.6.

  [ Tzafrir Cohen ]
  * Support increasing open files limit from init.d script.

 -- Kilian Krause <kilian@debian.org>  Sat, 22 Sep 2007 12:08:44 +0200

asterisk (1:1.4.11~dfsg-1) unstable; urgency=low

  [ Tzafrir Cohen ]
  * Remove libgtk2.0-dev from Build-Depends since the GTK+ console was not
    getting built anyway.

  [ Kilian Krause ]
  * Add dpkg-dev (>= 1.13.19) to Build-Depends for binary:Version and
    source:Version.

  [ Faidon Liambotis ]
  * New upstream release. (Closes: #439062)
    - AST-2007-020 Resource Exhaustion vulnerability in SIP channel driver
  * Switch to quilt as a patch management system instead of dpatch.
  * Add bristuff 0.4.0-test4
    - Split into smaller, individual patches (bristuff/).
    - Mention HFC-S/HFC-4S support in the Description.
    - Use libpri-bristuffed.so.1 and its respective header
      (use-libpri-bristuffed).
    - Ship xagi-test.c as an example.
    - Add a news item to NEWS.Debian stating bristuff's inclusion.
  * Major overhaul of the postinst scripts, completely replacing asterisk_fix.
    - Create Asterisk's directories on asterisk.dirs to track them using dpkg.
    - Add asterisk.postinst which calls adduser, chown, chmod. Improve error
      handling.
    - Don't do unnecessary stuff on asterisk-config postinst.
      (Closes: #431506)
    - chmod /etc/asterisk on build-time to allow the user to modify the