@@ -1,1 +1,0 @@
-../../contrib/scripts/vmail.cgi	usr/lib/cgi-bin/asterisk/
